Bugfix for webpage when served using fakewww

--- a/ndt_d3.html
+++ b/ndt_d3.html
@@ -8,7 +8,7 @@
 		<script src="ndt_d3.js"></script>
 		<script src="ndt-browser-client.js"></script>
 		<script>
-	 		var server = location.host;
+	 		var server = location.hostname;
 	  		var port = "3001";
 	   	 	var path = "/ndt_protocol";
             var NDT_meter, NDT_client;
